--- a/Angular7/src/app/user/registration/registration.component.html
+++ b/Angular7/src/app/user/registration/registration.component.html
@@ -1,3 +1,15 @@
-<p>
-  registration works!
-</p>
+
+<div class="row-mt-4">
+  <div class="col-md-6">
+    <div class="row" style = "height: 450px;">
+    <div class="col-md-12 my-auto side-header">
+      <img src="/assets/img/add_user.png" class="mx-auto d-block">
+      <h1>User Registration</h1>
+      <p><em>-Using <strong>Asp.Net Core WEb API</strong> and <strong>Angular7</strong></em></p>
+    </div>
+  </div>
+  <div class="col-md-6">
+
+  </div>
+</div>
+</div>
