--- a/Angular7/src/app/user/user.component.html
+++ b/Angular7/src/app/user/user.component.html
@@ -1,3 +1,5 @@
-<p>
-  user works!
-</p>
+<div class="container">
+  <div class="col-md-8 offset-2">
+    <router-outlet></router-outlet>
+  </div>
+</div>
