--- a/Angular7/src/app/user/registration/registration.component.html
+++ b/Angular7/src/app/user/registration/registration.component.html
@@ -1,5 +1,5 @@
 
-<div class="row-mt-4">
+<div class="row mt-4">
   <div class="col-md-6">
     <div class="row" style = "height: 450px;">
     <div class="col-md-12 my-auto side-header">
@@ -8,8 +8,36 @@
       <p><em>-Using <strong>Asp.Net Core WEb API</strong> and <strong>Angular7</strong></em></p>
     </div>
   </div>
-  <div class="col-md-6">
-
-  </div>
 </div>
+  <div class="col-md-6">
+<form [formGroup]= service.formModel autocomplete="off">
+  <div class="form-group required">
+      <label>Username</label>
+      <input class =" form-control" formControlName ="UserName">
+  </div>
+  <div class="form-group">
+      <label>Email</label>
+      <input class =" form-control" formControlName ="Email">
+  </div>
+  <div class="form-group">
+      <label>Full Name</label>
+      <input class =" form-control" formControlName ="FullName">
+  </div>
+  <div formGroupName =" Passwords">
+    <div class="form-group required">
+        <label>Password</label>
+        <input class =" form-control" formControlName ="Password">
+    </div>
+    <div class="form-group required">
+        <label>Confirm Password</label>
+        <input class =" form-control" formControlName ="ConfirmPassword">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-8 offset-md-2">
+      <button type="submit" class="btn btn-lg btn-block">Sign Up</button>
+    </div>
+  </div>
+</form>
+  </div>
 </div>
