can now form using cors through api with validation

--- a/Angular7/src/app/user/registration/registration.component.html
+++ b/Angular7/src/app/user/registration/registration.component.html
@@ -10,7 +10,7 @@
   </div>
 </div>
   <div class="col-md-6">
-<form [formGroup]= service.formModel autocomplete="off">
+<form [formGroup]= service.formModel autocomplete="off" (submit)="onSubmit()">
   <div class="form-group required">
       <label>Username</label>
       <input class =" form-control" formControlName ="UserName">
@@ -42,7 +42,7 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-8 offset-md-2">
-      <button type="submit" class="btn btn-lg btn-block">Sign Up</button>
+      <button type="submit" class="btn btn-lg btn-block" [disabled]="!service.formModel.valid">Sign Up</button>
     </div>
   </div>
 </form>
