added html form for login , changed look

--- a/Angular7/src/app/user/registration/registration.component.html
+++ b/Angular7/src/app/user/registration/registration.component.html
@@ -1,6 +1,6 @@
 
 <div class="row mt-4">
-  <div class="col-md-6">
+  <!-- <div class="col-md-6">
     <div class="row" style = "height: 450px;">
     <div class="col-md-12 my-auto side-header">
       <img src="/assets/img/add_user.png" class="mx-auto d-block">
@@ -8,7 +8,7 @@
       <p><em>-Using <strong>Asp.Net Core WEb API</strong> and <strong>Angular7</strong></em></p>
     </div>
   </div>
-</div>
+</div> -->
   <div class="col-md-6">
 <form [formGroup]= service.formModel autocomplete="off" (submit)="onSubmit()">
   <div class="form-group required">
