--- a/Angular7/src/styles.css
+++ b/Angular7/src/styles.css
@@ -1,46 +1,95 @@
+/* You can add global styles to this file, and also import other style files */
 body{
-    background-color: #ffc107;;
+    background-color: #04c582;;
 }
 
 input.form-control,input.form-control:focus{
-    background-color: #ffc107;
-    color: black;
-    border-color: black;
-    border-radius: 0px;
-    border-width: 2px;
+    background-color: #636b7b;
+    color: #fff;
+    border: 1px solid #636b7b;
+
 }
 
 input.form-control:focus{
     box-shadow: none;
-    border-bottom-color: black;
 }
 
 button[type=submit].btn{
     border-radius: 20px;
-    background-color: #000;
+    background-color: #04c582;
     color: #fff;
 }
 
-div.form-group label{
-    color: black;
-    font-weight: bold;
+div.form-group label:not(.text-danger){
+    color: #545d6a;
+    font-weight: 700;
 }
 
 div.form-group.required>label:first-child:after{
     content:'*';
-    color: #dc3545;
-	padding-left: 5px;
+    color: #fff;
+    padding-left: 5px;
 }
 
 #toast-container > div {
     opacity:1;
 }
 
+.wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    justify-content: center;
+    width: 100%;
+    padding: 20px;
+  }
 
-form{
-    margin: 0px 16px;
+  .wrapped-div {
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    background: #2e3137;
+    padding: 30px;
+    width: 90%;
+    max-width: 450px;
+    position: relative;
+    padding: 0px;
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  }
+
+  /* Tabs */
+.tab-header{
+    text-align: center;
 }
 
-div.side-header{
-    border:3px solid black;
-}
+  .tab-header h2.active {
+    color: #fff;
+    border-bottom: 4px solid #fff;
+  }
+
+  .tab-header h2 {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    display:inline-block;
+    padding: 30px 40px 10px 40px;
+    cursor: pointer;
+    color: #545d6a;
+    border-bottom: 2px solid #545d6a;
+  }
+
+  .tab-header h2:focus {
+      outline: none;
+  }
+
+  form{
+      margin: 0px 16px;
+  }
+
+ div.form-group input.invalid{
+    border: 1px solid #dc3545; 
+ }
+ div.form-group label:first-child{
+    text-transform: uppercase;
+    font-size: 0.9rem;
+ }
