--- a/Angular7/src/app/home/home.component.html
+++ b/Angular7/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<nav class="navbar navbar-dark bg-dark">
+  <a href="" class="navbar-brand text-white">JWT Auth system</a>
+  <button class="btn btn-danger my-2 my-sm-0" (click) = "onLogout()">Logout</button>
+</nav>
