--- a/Angular7/src/app/home/home.component.html
+++ b/Angular7/src/app/home/home.component.html
@@ -2,3 +2,12 @@
   <a href="" class="navbar-brand text-white">JWT Auth system</a>
   <button class="btn btn-danger my-2 my-sm-0" (click) = "onLogout()">Logout</button>
 </nav>
+
+<div class="card m-5" style ="width:18rem" *ngIf="userDetails">
+<ul>
+  <li class ="list-group-item"><strong>Username :</strong>{{userDetails.userName}}</li>
+  <li class ="list-group-item"><strong>FullName :</strong>{{userDetails.fullName}}</li>
+  <li class ="list-group-item"><strong>Email :</strong>{{userDetails.email}}</li>
+
+</ul>
+</div>
